style: I added normalize.css, and I resolved the overflow issue in the items list

--- a/src/Components/AppAdd/AppAdd.css
+++ b/src/Components/AppAdd/AppAdd.css
@@ -12,7 +12,7 @@
 
 .App__add input {
     border: 0.1rem solid var(--third-color);
-    padding-left: 1.2rem;
+    padding: 0 1.2rem;
     height: 2.8rem;
     grid-column: 1 / 3;
     grid-row: 1 / 2;
