--- a/src/Components/AppList/AppList.css
+++ b/src/Components/AppList/AppList.css
@@ -6,7 +6,7 @@
     align-items: center;
     width: 100%;
     max-height: 22rem;
-    overflow: scroll;
+    overflow-y: scroll;
     overflow-x: hidden;
     padding: 0 0.4rem;
     margin-bottom: 4rem;
@@ -17,13 +17,14 @@
     align-items: center;
     justify-content: flex-start;
     width: 100%;
-    padding: 0.8rem 1.6rem 0.8rem 1.6rem;
+    padding: 0.8rem 1.2rem 0.8rem 1.6rem;
     margin: 0.8rem 0;
     box-shadow: 0 0 0.4rem rgba(0, 0, 0, 0.2);
     border-radius: 0.4rem;
     font-size: 1.6rem;
     font-weight: 500;
-    color: rgba(0, 0, 0, 0.6)
+    color: rgba(0, 0, 0, 0.6);
+    overflow-wrap: anywhere;
 }
 
 
@@ -41,6 +42,7 @@
     margin-right: 1.6rem;
     box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.2);
     font-weight: bold;
+    overflow-wrap: normal;
 }
 
 .AppList_pay {
